# naiverend

./: CMakeLists.txt  README.md
ext/: imgui_impl_glfw_gl3.cpp
res/: .gitignore
res/head/: Infinite-Scan_License.txt  head.mtl
src/: basic_program.cpp  basic_program.hpp  camera.cpp  camera.hpp  gl_core_4_1.c  input_handler.cpp  input_handler.hpp  main.cpp  material.cpp  material.hpp  math_types.hpp  mc_tables.hpp  mesh.cpp  mesh.hpp  mesh_parser.cpp  mesh_parser.hpp  model.cpp  model.hpp  model_parser.cpp  model_parser.hpp  scene.cpp  scene.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp
src/shader/: basic_program.frag  basic_program.vert
